--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <img src="assets/images/bd-army.png" alt="Bangladesh Army">                
             </div>
             <div class="slider-slide">
-                <img src="assets/images/air-Force.png" alt="Bangladesh Air Force">                
+                <img src="assets/images/air-force.png" alt="Bangladesh Air Force">                
             </div>
             <div class="slider-slide">
                 <img src="assets/images/bd-navy.png" alt="Bangladesh Navy">
@@ -265,3 +265,4 @@
     <script src="assets/script.js"></script>
 </body>
 </html>
+
