--- a/index.html
+++ b/index.html
@@ -92,33 +92,41 @@
                     </div>
                     <div class="client-card">
                         <img src="assets/images/client2.png" alt="DGDP">
-                        <p>DGDP</p>
+                        <p>Bangladesh Navy</p>
                     </div>
                     <div class="client-card">
                         <img src="assets/images/client3.png" alt="Bangladesh Air Force">
-                        <p>Bangladesh Air Force</p>
+                        <p>DGDP</p>
                     </div>
                     <div class="client-card">
                         <img src="assets/images/client4.png" alt="Border Guard Bangladesh">
-                        <p>Border Guard Bangladesh</p>
+                        <p>Bangladesh Air Force</p>
                     </div>
                     <div class="client-card">
                         <img src="assets/images/client5.png" alt="Village Defence Police">
+                        <p>Border Guard Bangladesh</p>
+                    </div>					
+					<div class="client-card">
+                        <img src="assets/images/client6.png" alt="Village Defence Police">
                         <p>Village Defence Police</p>
+                    </div>	
+					<div class="client-card">
+                        <img src="assets/images/client7.png" alt="Bangladesh Police">
+                        <p>Bangladesh Police</p>
                     </div>
                     
                     <!-- Duplicate set for seamless loop -->
                     <div class="client-card">
                         <img src="assets/images/client1.png" alt="Bangladesh Navy">
-                        <p>Bangladesh Navy</p>
+                        <p>Bangladesh Army</p>
                     </div>
                     <div class="client-card">
                         <img src="assets/images/client2.png" alt="DGDP">
-                        <p>DGDP</p>
+                        <p>Bangladesh Navy</p>
                     </div>
                     <div class="client-card">
                         <img src="assets/images/client3.png" alt="Bangladesh Air Force">
-                        <p>Bangladesh Air Force</p>
+                        <p>DGDP</p>
                     </div>
                     <div class="client-card">
                         <img src="assets/images/client4.png" alt="Border Guard Bangladesh">
@@ -143,11 +151,19 @@
                     </div>
                     <div class="client-card">
                         <img src="assets/images/client4.png" alt="Border Guard Bangladesh">
-                        <p>Border Guard Bangladesh</p>
+                        <p>Bangladesh Air Force</p>
                     </div>
                     <div class="client-card">
                         <img src="assets/images/client5.png" alt="Village Defence Police">
+                        <p>Border Guard Bangladesh</p>
+                    </div>
+					<div class="client-card">
+                        <img src="assets/images/client6.png" alt="Village Defence Police">
                         <p>Village Defence Police</p>
+                    </div>
+					<div class="client-card">
+                        <img src="assets/images/client7.png" alt="Bangladesh Police">
+                        <p>Bangladesh Police</p>
                     </div>
                 </div>
             </div>
@@ -265,4 +281,5 @@
     <script src="assets/script.js"></script>
 </body>
 </html>
+
 
