--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    	<link rel="icon" href="headlogo.png" type="image/x-icon">
+    	<link rel="icon" href="assets/images/headlogo.png" type="image/x-icon">
 	<title>SA Trading Corporation</title>
     <link rel="stylesheet" href="assets/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Satoshi:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -281,5 +281,6 @@
     <script src="assets/script.js"></script>
 </body>
 </html>
+
 
 
