--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
                     <span>SA Trading Corporation</span>
                 </div>
                 <p class="footer-description">
-                    Graphy empowers teams to transform raw data into clear, compelling visuals — making insights easier to share, understand, and act on.
-                </p>
+               SA Trading Corporation offers reliable, high-quality global supplies with full import authorization, ensuring timely delivery and exceptional service.
+				</p>
                 <div class="social-icons">
                     <a href="#" aria-label="X social network">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
@@ -281,6 +281,7 @@
     <script src="assets/script.js"></script>
 </body>
 </html>
+
 
 
 
