--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <nav class="nav-desktop">
                     <a href="#home" class="nav-link">Home</a>
                     <a href="Company Profile.html" class="nav-link">Company Profile</a>
-                    <a href="Team.html" class="nav-link">Team</a>
+                    <a href="team.html" class="nav-link">Team</a>
                     <a href="#contact" class="nav-link">Contact Us</a>
                 </nav>
                 <button class="mobile-menu-btn" id="mobileMenuBtn">
@@ -281,6 +281,7 @@
     <script src="assets/script.js"></script>
 </body>
 </html>
+
 
 
 
