--- a/team.html
+++ b/team.html
@@ -56,7 +56,7 @@
   
     <div class="team-card">
       <div class="image-container">
-        <img src="assets/images/person1.jpg" alt="Team Member">
+        <img src="assets/images/alamgir.jpeg" alt="Team Member">
       </div>
       <div class="card-content">
         <h3>Alamgir Hossain</h3>
@@ -151,3 +151,4 @@
 
 </body>
 </html>
+
