--- a/team.html
+++ b/team.html
@@ -97,7 +97,7 @@
 				<span>SA Trading Corporation</span>
                 </div>
                 <p class="footer-description">
-                    Graphy empowers teams to transform raw data into clear, compelling visuals — making insights easier to share, understand, and act on.
+               SA Trading Corporation offers reliable, high-quality global supplies with full import authorization, ensuring timely delivery and exceptional service.
                 </p>
                 <div class="social-icons">
                     <a href="#" aria-label="X social network">
@@ -151,4 +151,5 @@
 
 </body>
 </html>
+
 
