--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="#home" class="nav-link">Home</a>
                     <a href="Company Profile.html" class="nav-link">Company Profile</a>
                     <a href="team.html" class="nav-link">Team</a>
-                    <a href="#contact" class="nav-link">Contact Us</a>
+                    <a href="contact.html" class="nav-link">Contact Us</a>
                 </nav>
                 <button class="mobile-menu-btn" id="mobileMenuBtn">
                     <span></span>
@@ -281,6 +281,7 @@
     <script src="assets/script.js"></script>
 </body>
 </html>
+
 
 
 
