--- a/team.html
+++ b/team.html
@@ -31,8 +31,8 @@
                 <nav class="nav-desktop">
                     <a href="Index2.html" class="nav-link">Home</a>                   
                     <a href="Company Profile.html" class="nav-link">Company Profile</a>
-                    <a href="#team" class="nav-link">Team</a>
-                    <a href="#contact" class="nav-link">Contact Us</a>
+                    <a href="team.html" class="nav-link">Team</a>
+                    <a href="contact.html" class="nav-link">Contact Us</a>
                 </nav>
                 <button class="mobile-menu-btn" id="mobileMenuBtn">
                     <span></span>
@@ -151,5 +151,6 @@
 
 </body>
 </html>
+
 
 
