--- a/contact.html
+++ b/contact.html
@@ -360,7 +360,7 @@
         <a href="index.html" class="nav-link">Home</a>
         <a href="index.html#partners" class="nav-link">Partners</a>
         <a href="Company Profile.html" class="nav-link">Company Profile</a>
-        <a href="Team.html" class="nav-link">Team</a>
+        <a href="team.html" class="nav-link">Team</a>
         <a href="contact.html" class="nav-link">Contact Us</a>
     </nav>
 
@@ -628,4 +628,5 @@
                     </div>
                 </div>
                 <div class="footer-links-column">
+
                     <h4 class="
