--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                     </div>
                     <div class="client-card">
                         <img src="assets/images/client4.png" alt="Border Guard Bangladesh">
-                        <p>Border Guard Bangladesh</p>
+                        <p>Bangladesh Air Force</p>
                     </div>
                     <div class="client-card">
                         <img src="assets/images/client5.png" alt="Village Defence Police">
-                        <p>Village Defence Police</p>
+                        <p>Border Guard Bangladesh</p>
                     </div>
 					 <!-- Duplicate set for seamless loop -->
                     <div class="client-card">
@@ -281,6 +281,7 @@
     <script src="assets/script.js"></script>
 </body>
 </html>
+
 
 
 
