--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
                     </div>
                     <div class="client-card">
                         <img src="assets/images/client2.png" alt="DGDP">
-                        <p>DGDP</p>
+                        <p>Bangladesh Navy</p>
                     </div>
                     <div class="client-card">
                         <img src="assets/images/client3.png" alt="Bangladesh Air Force">
-                        <p>Bangladesh Air Force</p>
+                        <p>DGDP</p>
                     </div>
                     <div class="client-card">
                         <img src="assets/images/client4.png" alt="Border Guard Bangladesh">
@@ -281,6 +281,7 @@
     <script src="assets/script.js"></script>
 </body>
 </html>
+
 
 
 
